--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title></title>
+    <script src="underscore-1.6-min.js"></script>
+    <script src="svg.min.js"></script>
+
 </head>
 <body>
  %$£^&&%^&^%&^%&£$%$"$"£
