--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,11 @@
     <title></title>
     <script src="underscore-1.6-min.js"></script>
     <script src="svg.min.js"></script>
-
 </head>
 <body>
- %$£^&&%^&^%&^%&£$%$"$"£
+<div id="drawing">
+</div>
+
+%$£^&&%^&^%&^%&£$%$"$"£
 </body>
 </html>
