it turns out svg.js is much faster

--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,11 @@
     <script src="snap.svg-min.js"></script>
 </head>
 <body>
-<div id="drawing">
+<div id="#drawing">
 </div>
+<script>
 
+</script>
 %$£^&&%^&^%&^%&£$%$"$"£
 </body>
 </html>
