--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,19 @@
 <head>
     <title></title>
     <script src="underscore-1.6-min.js"></script>
-    <script src="snap.svg-min.js"></script>
+    <script src="svg.min.js"></script>
+
+    <script src="main.js"></script>
 </head>
 <body>
-<div id="#drawing">
+<div id="drawing">
 </div>
-<script>
 
+<script>
+(function() {
+initGraph();
+
+})();
 </script>
 %$£^&&%^&^%&^%&£$%$"$"£
 </body>
