--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script src="underscore-1.6-min.js"></script>
-    <script src="svg.min.js"></script>
+    <script src="svg-dev.js"></script>
 
     <script src="main.js"></script>
 </head>
