almost fixed tests

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>notd3</title>
-  <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
+    <title>Lab : Karma, RequireJS, Jasmine</title>
 </head>
 <body>
-  <h1>js graphs running!</h1>
+    <script src="node_modules/requirejs/require.js" data-main="src/main.js"></script>
 </body>
 </html>
